Fixed final slide not displaying

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 
 
+  <meta name="date" content="2020-09-05" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -3120,6 +3121,7 @@ slide:not(.current) .plotly.html-widget{
       <h1 data-config-title><!-- populated from slide_config.json --></h1>
       
       <p data-config-presenter><!-- populated from slide_config.json --></p>
+            <p style="margin-top: 6px; margin-left: -2px;">09/05/2020</p>
           </hgroup>
   </slide>
 
@@ -3162,7 +3164,12 @@ head(df[order(df$Name),], 4)</pre>
 
 <pre class = 'prettyprint lang-r'>write.csv(df, &quot;./Sales/data/testData.csv&quot;, row.names = FALSE)</pre>
 
-</article></slide><slide class=""><hgroup><h2>Project Resources</h2></hgroup><article  id="project-resources"></article></slide>
+</article></slide><slide class=""><hgroup><h2>Project Resources</h2></hgroup><article  id="project-resources">
+
+<ul>
+<li><a href='https://github.com/PhiPrime/firstShinyApp' title=''>The repository containing the code for the Shiny app can be found on my GitHub.</a><br/></li>
+<li><a href='https://phiprime.shinyapps.io/Sales/' title=''>The Shiny app can be found here.</a></li>
+</ul></article></slide>
 
 
   <slide class="backdrop"></slide>
